[package]
name = "quartz-rs"
version = "0.1.0"
authors = ["wingerse <aiman012@live.com>"]

[dependencies]
byteorder = "1.2.1"
serde = {version = "1.0.35", features = ["rc"]}
serde_json = "1.0.13"
serde_derive = "1.0.35"
quick-error = "1.2.1"
uuid = {version = "0.6.2", features = ["v3"]}
base64 = "0.9.0"
flate2 = "1.0.1"
failure = "0.1.1"
failure_derive = "0.1.1"
noise = "0.5.1"